11-wordpress-deploy/02-wp-dep.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: wp-dep 
  labels:
    app: wp-dep
spec:
  replicas: 2
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: wp-dep
  template:
    metadata:
      labels:
        app: wp-dep
    spec:
      containers:
      - name: wordpress
        image: wordpress:6
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 1 
            memory: 1024Mi
          requests:
            cpu: 200m 
            memory: 500Mi
        startupProbe:
          periodSeconds: 5
          tcpSocket:
            port: 80
        livenessProbe:
          periodSeconds: 10
          tcpSocket:
            port: 80
        readinessProbe:
          periodSeconds: 15
          tcpSocket:
            port: 80
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: wp-dep-svc
  labels:
spec:
  selector:
    app: wp-dep
  ports:
  - port: 80 
    targetPort: 80 
    protocol: TCP
    name: http
