11-wordpress-deploy/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-mysql-svc
  labels:
spec:
  selector:
    app: wp-mysql 
  ports:
  - port: 3306 
    targetPort: 3306 
    protocol: TCP
