11-wordpress-deploy/wp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-dep-svc
  labels:
spec:
  selector:
    app: wp-dep
  type: NodePort
  ports:
  - port: 80 
    targetPort: 80 
    protocol: TCP
    nodePort: 30080
    name: http
